got frontend working

--- a/AuthenticatorServer/app/templates/register.html
+++ b/AuthenticatorServer/app/templates/register.html
@@ -22,9 +22,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
 
     <!-- Custom styles for this template -->
-    <link href="jumbotron-narrow.css" rel="stylesheet">
+    <link href="{{url_for('static', filename='jumbotron-narrow.css')}}" rel="stylesheet">
 
-    <script type="text/javascript" src="./qrcode.js"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='qrcode.js')}}"></script>
   </head>
 
   <body>
