--- a/AuthenticatorServer/app/templates/register.html
+++ b/AuthenticatorServer/app/templates/register.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,77 +9,76 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-​
+    <link rel="icon" href="../../favicon.ico"> ​
     <title>Authenticator</title>
-​
+    ​
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-​
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous"> ​
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
-​
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous"> ​
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-​
+    ​
     <!-- Custom styles for this template -->
-    <link href="{{url_for('static', filename='jumbotron-narrow.css')}}" rel="stylesheet">
-​
+    <link href="{{url_for('static', filename='jumbotron-narrow.css')}}" rel="stylesheet"> ​
     <script type="text/javascript" src="{{url_for('static', filename='qrcode.js')}}"></script>
-  </head>
+</head>
 ​
-  <body>
-​
-    <div class="container">
-      <div class="header clearfix">
-        <h3 class="text-muted">Authenticator Project 2B</h3>
-      </div>
-​
-      <div class="jumbotron">
-        <h1>Register</h1>
-        <p class="lead">Scan QR Code:</p>
-        <center><div id="qrcode"></div></center>
-      </div>
-​
-     
-​
-      <footer class="footer">
-        <p>Jeffrey, Jose, Michelle, Rohit, Sam</p>
-      </footer>
-​
-    </div> <!-- /container -->
-    <script type="text/javascript">
-      var getCode;
-      var getQR = function() {
-        var code = null;
-      $.get("http://localhost:5000/login/get_code", function(data){
-        new QRCode(document.getElementById("qrcode"), data);
-        code = data;
-        alert(data);
-      });
-      }
-      var passed = true;
-      getQR();
-      
 
-      var check_code = function(code) {
-        if(passed){
-          $.post("http://localhost:5000/login/get_cookie", {'one_time_code':code}, function(data){
-            if(data=="True"){
-              passed = false;
-              alert(data);
-              location.href = "http://www.google.com";
-            }else{
-              setTimeout(QRCode, 1000);
-            }
-          });
-          
-        }else{
-          //clearInterval(interval);
+<body>
+    ​
+    <div class="container">
+        <div class="header clearfix">
+            <h3 class="text-muted">Authenticator Project 2B</h3>
+        </div>
+        ​
+        <div class="jumbotron">
+            <h1>Register</h1>
+            <p class="lead">Scan QR Code:</p>
+            <center>
+                <div id="qrcode"></div>
+            </center>
+        </div>
+        ​ ​
+        <footer class="footer">
+            <p>Jeffrey, Jose, Michelle, Rohit, Sam</p>
+        </footer>
+        ​
+    </div>
+    <!-- /container -->
+    <script type="text/javascript">
+        var getCode;
+        var getQR = function() {
+            $.get("http://localhost:5000/login/get_code", function(data) {
+                new QRCode(document.getElementById("qrcode"), data);
+                getCode = data;
+                check_code(getCode);
+            });
         }
-      }
-      //var interval = setInterval(check_code, 5000);
-      
+        var passed = true;
+        getQR();
+
+
+        var check_code = function(code) {
+                if (passed) {
+                    $.post("http://localhost:5000/login/get_cookie", {
+                        'one_time_code': code
+                    }, function(data) {
+                        if (data == "True") {
+                            passed = false;
+                            alert(data);
+                            location.href = "http://www.google.com";
+                        } else {
+                            setTimeout(QRCode, 1000);
+                        }
+                    });
+
+                } else {
+                    //clearInterval(interval);
+                }
+            }
+            //var interval = setInterval(check_code, 5000);
     </script>
-  </body>
+</body>
+
 </html>
