--- a/AuthenticatorServer/app/templates/register.html
+++ b/AuthenticatorServer/app/templates/register.html
@@ -1,32 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'layouts/base.html' %}
 
-<head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico"> ​
-    <title>Authenticator</title>
-    ​
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous"> ​
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous"> ​
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-    ​
-    <!-- Custom styles for this template -->
-    <link href="{{url_for('static', filename='jumbotron-narrow.css')}}" rel="stylesheet"> ​
-    <script type="text/javascript" src="{{url_for('static', filename='qrcode.js')}}"></script>
-</head>
-​
-
-<body>
-    ​
+{% block content %}
     <div class="container">
         <div class="header clearfix">
             <h3 class="text-muted">Authenticator Project 2B</h3>
@@ -51,7 +25,7 @@
         var checks = 0;
         var getQR = function() {
             $("#qrcode").empty();
-            $.get("http://10.0.1.223:5000/login/get_code", function(data) {
+            $.get("http://localhost:5000/login/get_code", function(data) {
                 new QRCode(document.getElementById("qrcode"), data);
                 getCode = data;
                 setTimeout(check_code, 1500);
@@ -64,7 +38,7 @@
         var check_code = function() {
                 var code = getCode;
                 checks += 1;
-                $.post("http://10.0.1.223:5000/login/get_cookie", {
+                $.post("http://localhost:5000/login/get_cookie", {
                     'one_time_code': code
                 }, function(data) {
                     if (data == "successful login") {
@@ -85,6 +59,4 @@
             }
             //var interval = setInterval(check_code, 5000);
     </script>
-</body>
-
-</html>
+{% endblock content %}
