--- a/AuthenticatorServer/app/templates/register.html
+++ b/AuthenticatorServer/app/templates/register.html
@@ -1,79 +1,87 @@
 {% extends 'layouts/base.html' %}
-    ​{% block content %}
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Authenticator Project 2B</a>
-
-    <div class="container">
-        <div class="header clearfix">
-            <h3 class="text-muted">Authenticator Project 2B</h3>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
-            <button type="submit" class="btn btn-success">Log Out</button>
-          </form>
-        </div><!--/.navbar-collapse -->
-      </div>
-    </nav>
-        ​
-        <div class="jumbotron">
-            <h1>Register</h1>
-            <p class="lead">Scan QR Code:</p>
-            <center>
-                <div id="qrcode"></div>
-            </center>
-        </div>
-        ​ ​
-        <footer class="footer">
-            <p>Jeffrey, Jose, Michelle, Rohit, Sam</p>
-        </footer>
-        ​
-    </div>
-    <!-- /container -->
-    <script type="text/javascript">
-        var getCode;
-        var checks = 0;
-        var getQR = function() {
-            $("#qrcode").empty();
-            $.get("http://localhost:5000/login/get_code", function(data) {
-                new QRCode(document.getElementById("qrcode"), data);
-                getCode = data;
-                setTimeout(check_code, 1500);
-            });
-        }
-
-        getQR();
+	​{% block content %}
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+	  <div class="container">
+		<div class="navbar-header">
+		  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		  </button>
+		  <a class="navbar-brand" href="#">Authenticator Project 2B</a>
+		  {% if session.get("logged_in") %}
+		  <button type="submit" class="btn btn-success">Log Out</button>
+		  {% else %}
+		  <button type="submit" class="btn btn-success">Log In</button>
+		  {% endif %}
+		  </div>
+		  </div>
 
 
-        var check_code = function() {
-                var code = getCode;
-                checks += 1;
-                $.post("http://localhost:5000/login/get_cookie", {
-                    'one_time_code': code
-                }, function(data) {
-                    if (data == "successful login") {
-                        alert(data);
-                        location.href = "http://localhost:5000/login/test";
-                    } else {
-                        if (checks < 8)
-                            setTimeout(check_code, 1500);
-                        else
-                        {
-                            checks = 0;
-                            setTimeout(getQR, 500);
-                        }
-                    }
-                });
+
+<!--     <div class="container">
+		<div class="header clearfix">
+			<h3 class="text-muted">Authenticator Project 2B</h3>
+		</div>
+		<div id="navbar" class="navbar-collapse collapse">
+		  <form class="navbar-form navbar-right">
+			<button type="submit" class="btn btn-success">Log Out</button>
+		  </form>
+		</div><!--/.navbar-collapse -->
+	</nav>
+		​
+		<div class="jumbotron">
+			<h1>Register</h1>
+			<p class="lead">Scan QR Code:</p>
+			<center>
+				<div id="qrcode"></div>
+			</center>
+		</div>
+		​ ​
+		<footer class="footer">
+			<p>Jeffrey, Jose, Michelle, Rohit, Sam</p>
+		</footer>
+		​
+	</div>
+	<!-- /container -->
+	<script type="text/javascript">
+		var getCode;
+		var checks = 0;
+		var getQR = function() {
+			$("#qrcode").empty();
+			$.get("http://localhost:5000/login/get_code", function(data) {
+				new QRCode(document.getElementById("qrcode"), data);
+				getCode = data;
+				setTimeout(check_code, 1500);
+			});
+		}
+
+		getQR();
 
 
-            }
-            //var interval = setInterval(check_code, 5000);
-    </script>
+		var check_code = function() {
+				var code = getCode;
+				checks += 1;
+				$.post("http://localhost:5000/login/get_cookie", {
+					'one_time_code': code
+				}, function(data) {
+					if (data == "successful login") {
+						alert(data);
+						location.href = "http://localhost:5000/login/test";
+					} else {
+						if (checks < 8)
+							setTimeout(check_code, 1500);
+						else
+						{
+							checks = 0;
+							setTimeout(getQR, 500);
+						}
+					}
+				});
+
+
+			}
+			//var interval = setInterval(check_code, 5000);
+	</script>
 {% endblock content %}
