--- a/AuthenticatorServer/app/templates/index.html
+++ b/AuthenticatorServer/app/templates/index.html
@@ -60,10 +60,9 @@
       <div class="jumbotron">
       <div class="container">
         <h1>Welcome, Clover Family!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <center></center><p><a class="btn btn-lg btn-success" href="login.html" role="button">Login</a>
-        <a class="btn btn-lg btn-success" href="register.html" role="button">
-        Register</a></p></center>
+        <p>You can log into this site using TouchID.</p>
+        <center></center><p><a class="btn btn-lg btn-success" href="/login" role="button">Login</a>
+
       </div>
       </div>
 
