Moved navbar to base.html and cleaned up

--- a/AuthenticatorServer/app/templates/layouts/base.html
+++ b/AuthenticatorServer/app/templates/layouts/base.html
@@ -17,12 +17,30 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
     ​
     <!-- Custom styles for this template -->
-    <link href="{{url_for('static', filename='jumbotron-narrow.css')}}" rel="stylesheet"> 
+    <link href="{{url_for('static', filename='jumbotron.css')}}" rel="stylesheet"> 
         <script type="text/javascript" src="{{url_for('static', filename='qrcode.js')}}"></script>
 
 
 </head>
 <body>
+
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar-header">
+            <div class="container">
+                <div class="col-xs-10">
+                    <a class="navbar-brand" href="#">Authenticator Project 2B</a>
+                </div>
+                <div class="col-xs-2">
+                  {% if session.get("logged_in") %}
+                      <button type="submit" class="btn btn-success">Log Out</button>
+                  {% else %}
+                      <button type="submit" class="btn btn-success">Log In</button>
+                  {% endif %}
+                </div>
+          </div>
+        </div>
+    </nav>
+
 {% block content %}
 
 {% endblock %}
