--- a/AuthenticatorServer/app/templates/layouts/base.html
+++ b/AuthenticatorServer/app/templates/layouts/base.html
@@ -46,6 +46,6 @@
 {% endblock %}
 </body>
 
-<footer>
-
-</footer>
+        <footer class="footer">
+            <p>Jeffrey, Jose, Michelle, Rohit, Sam</p>
+        </footer>
