--- a/AuthenticatorServer/app/templates/portal.html
+++ b/AuthenticatorServer/app/templates/portal.html
@@ -1,51 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico"> ​
-    <title>Authenticator</title>
-    ​
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous"> ​
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous"> ​
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-    ​
-    <!-- Custom styles for this template -->
-    <!-- <link href="{{url_for('static', filename='jumbotron-narrow.css')}}" rel="stylesheet"> ​ -->
-    <link href="../static/jumbotron.css" rel="stylesheet">
-    <script type="text/javascript" src="{{url_for('static', filename='qrcode.js')}}"></script>
-</head>
-​
-
-<body>
-    ​
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Authenticator Project 2B</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
-            <button type="submit" class="btn btn-success logout text-right" id="logout">Log Out</button>
-          </form>
-        </div><!--/.navbar-collapse -->
-      </div>
-    </nav>
+{% extends 'layouts/base.html' %}
+  ​{% block content %}
         ​
         <div class="jumbotron">
         {% if session.get("logged_in") and session.get("username") %}
@@ -58,15 +12,7 @@
 
         
         ​ ​
-        <footer class="footer">
-            <p>Jeffrey, Jose, Michelle, Rohit, Sam</p>
-        </footer>
+
         ​
     </div>
-
-
-</body>
-
-
-
-</html>
+{% endblock content %}
