--- a/AuthenticatorServer/app/templates/index.html
+++ b/AuthenticatorServer/app/templates/index.html
@@ -1,5 +1,7 @@
 {% extends 'layouts/base.html' %}
   ​{% block content %}
+    {% set active_page = 'home' %}
+
 
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
