--- a/AuthenticatorServer/app/templates/index.html
+++ b/AuthenticatorServer/app/templates/index.html
@@ -7,9 +7,9 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
       <div class="container">
-        <h1>Welcome, Clover Family!</h1>
-        <p>You can log into this site using TouchID.</p>
-        <center></center><p><a class="btn btn-lg btn-success" href="/login" role="button">Login</a>
+        <h1 class="text-center">Welcome, Clover Family!</h1>
+        <p class="text-center">You can log into this site using TouchID.</p>
+        <p class="text-center"><a class="btn btn-lg btn-success" href="/login" role="button">Login</a>
 
       </div>
       </div>
