--- a/AuthenticatorServer/app/templates/register.html
+++ b/AuthenticatorServer/app/templates/register.html
@@ -2,8 +2,8 @@
 	​{% block content %}
 		​
 		<div class="jumbotron">
-			<h1>Register</h1>
-			<p class="lead">Scan QR Code:</p>
+			<h1 class="text-center">Register</h1>
+			<p class="lead text-center">Scan QR Code:</p>
 			<center>
 				<div id="qrcode"></div>
 			</center>
