added sticky footer

--- a/AuthenticatorServer/app/templates/layouts/base.html
+++ b/AuthenticatorServer/app/templates/layouts/base.html
@@ -18,6 +18,7 @@
     ​
     <!-- Custom styles for this template -->
     <link href="{{url_for('static', filename='jumbotron.css')}}" rel="stylesheet"> 
+    <link href="{{url_for('static', filename='sticky-footer.css')}}" rel="stylesheet">
         <script type="text/javascript" src="{{url_for('static', filename='qrcode.js')}}"></script>
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -48,5 +49,5 @@
 </body>
 
         <footer class="footer">
-            <p>Jeffrey, Jose, Michelle, Rohit, Sam</p>
+            <p class="text-muted">Jeffrey, Jose, Michelle, Rohit, Sam</p>
         </footer>
